[tool.poetry]
name = "ky3m"
version = "0.1.0"
description = "Minecraft Mod Manager by Leon \"Procybit\" Shepelev"
authors = ["Leon \"Procybit\" Shepelev <kyleusnaff@gmail.com>"]
license = "MIT"
packages = [
    { include = "ky3m" },
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
toml = "~0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
